--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -1,7 +1,13 @@
 .thirdwindow {
   height: 90vh;
   width: 100%;
-  background-color: rgb(255, 0, 255);
+  background-color: rgb(0, 0, 0);
+  color: white;
   position: relative;
   display: block;
+}
+
+
+.fadeinprojects {
+  
 }
