--- a/src/components/TopWindow/topwindow.css
+++ b/src/components/TopWindow/topwindow.css
@@ -2,6 +2,8 @@
   height: 100vh;
   width: 100%;
   background-image: url("react-background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   position: relative;
   display: block;
   z-index: 33;
