--- a/src/components/TopWindow/topwindow.css
+++ b/src/components/TopWindow/topwindow.css
@@ -1,10 +1,19 @@
 .window {
   height: 100vh;
   width: 100%;
-  background-image: url("react-background.jpg");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+  
   position: relative;
   display: block;
   z-index: 33;
+  color: white;
+  display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: stretch;
+}
+.topname{
+  font-size: 88px;
+  margin-bottom: -3%;
 }
