Click scroll events

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,9 +1,43 @@
 .backgroundimage {
-    width: 100vw;
-    height: 100vh;
-    background-image: url("react-background.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    position: fixed;
-    z-index: -3;
-  }
+  width: 100vw;
+  height: 100vh;
+  background-image: url("react-background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  position: fixed;
+  z-index: -3;
+}
+.navbarbox {
+  width: 100%;
+  height: 12vh;
+  background-color: rgba(0, 0, 0, 0.637);
+  float: top;
+  position: absolute;
+  z-index: 55;
+  color: white;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: stretch;
+}
+.navbarbox img {
+  max-height: 12vh;
+}
+.navflex {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: stretch;
+}
+.navflex div {
+  margin-right: 3vw;
+  cursor: pointer;
+}
+.navflex div:hover {
+  color: blue;
+}
