--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -51,3 +51,15 @@
   align-items: center;
   align-content: stretch;
 }
+.projectlinks{
+  color: white;
+}
+.projectlinks:hover{
+  color: blue;
+}
+
+@media screen and (max-width: 1024px) {
+  .projectpictiles{
+    display: none;
+  }
+}
