--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -50,6 +50,8 @@
   justify-content: space-around;
   align-items: center;
   align-content: stretch;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 .projectlinks{
   color: white;
