--- a/src/components/SkillWindow/secondwindow.css
+++ b/src/components/SkillWindow/secondwindow.css
@@ -10,6 +10,13 @@
   justify-content: center;
   align-items: center;
   align-content: stretch;
+  padding-top: 0px;
+}
+.secondwindow h1 {
+  margin-top: 0px;
+  position: absolute;
+  top: 0%;
+  margin-bottom: 20vh;
 }
 .iconrowflex {
   display: flex;
@@ -34,23 +41,35 @@
 }
 
 .skillparallaxdisplay {
-
   height: auto;
   width: 100vw;
+  margin-left: 0vw;
+  padding-left: 0vw;
+  padding-top: 12vh;
 }
 .skillresponsivedisplay {
   margin-bottom: 5%;
   display: none;
 }
-
+.custom-class {
+  overflow-x: hidden;
+  width: 100vw;
+  left: 0vw !important;
+}
+.parallax-outer {
+  margin-left: 0px !important;
+}
 @media screen and (max-width: 850px) {
   .skillparallaxdisplay {
     visibility: hidden;
+    overflow-x: hidden;
   }
   .skillresponsivedisplay {
     visibility: visible;
+    overflow-x: hidden;
   }
   .secondwindow {
     height: auto;
+    overflow-x: hidden;
   }
 }
