--- a/src/components/AboutMe/aboutme.css
+++ b/src/components/AboutMe/aboutme.css
@@ -11,7 +11,6 @@
 .aboutmeprofilepic {
   width: 40%;
   border-radius: 553px;
-
   margin-left: 5%;
 }
 
@@ -19,7 +18,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   align-content: stretch;
 }
@@ -46,10 +45,21 @@
 @media screen and (max-width: 581px) {
   .aboutmetext {
     font-size: 5vw;
+    max-width: 100%;
+  }
+  .aboutmeprofilepic {
+    margin-left: 0%;
+    width: 60%;
   }
 }
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 415px) {
   .aboutmetext {
     max-width: 100%;
+    font-size: 4.5vw;
+    margin-left: 5%;
+  }
+  .aboutmeprofilepic {
+    margin-left: 0%;
+    width: 80%;
   }
 }
