--- a/src/components/TopWindow/topwindow.css
+++ b/src/components/TopWindow/topwindow.css
@@ -30,12 +30,12 @@
 
 .statsDisplayFlex {
   display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: center;
-	align-items: center;
-	align-content: stretch;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: stretch;
+  text-align: center;
   bottom: 0%;
-  width: 95vw;
-  left: 2.5vw;
+  width: 100vw;
 }
