--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -7,7 +7,7 @@
 .underlinebox {
   display: block;
   color: white;
-  background-color: rgb(0, 4, 255);
+  background-color: white;
   height: 2px;
   width: 60%;
 }
@@ -50,9 +50,12 @@
   margin-left: 30vw;
   width: 40vw;
   height: auto;
-  background-color: rgb(255, 247, 235);
-  color: black;
-  border-radius: 12px;
+  background-image: url("./ContactForm/react-background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  color: white;
+  border-radius: 5vw;
+
   padding-bottom: 5vh;
   padding-top: 10vh;
 }
