--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,7 +1,7 @@
 .backgroundimage {
   width: 100vw;
   height: 100vh;
-  background-image: url("react-background.jpg");
+  background-image: url("backgroundimage.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   position: fixed;
