--- a/src/components/SkillWindow/secondwindow.css
+++ b/src/components/SkillWindow/secondwindow.css
@@ -1,7 +1,10 @@
 .secondwindow {
   height: 95vh;
   width: 100%;
-  background-color: rgb(255, 247, 235);
+  background-image: url("../Contact/ContactForm/react-background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  color: white;
   position: relative;
   display: block;
   display: flex;
@@ -63,5 +66,4 @@
   margin-left: 0px !important;
 }
 @media screen and (max-width: 850px) {
-
 }
